# monteloanco

./: .gitignore  01_dataprep.ipynb  02_demo.ipynb  03_model.ipynb  04_inspect.ipynb  05_simulate.ipynb  LICENSE  README.md  dataprep.ipynb  environment.yml  inspect.ipynb  mcmc.ipynb  model.ipynb  monteloanco.py  pyproject.toml  simulate.ipynb
